# docs/swagger.json
@@ -6,7 +6,6 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8888",
     "basePath": "/",
     "paths": {
         "/files/{name}": {
@@ -66,11 +65,11 @@
         "file_info.FileInfo": {
             "type": "object",
             "properties": {
-                "filename_hash": {
+                "filename": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "status": {
                     "$ref": "#/definitions/file_info.FileInfoStatus"
